# SuperTerminalMetal

./: BaseRunner.h  BaseRunner.mm  BaseRunner_Architecture.txt  BaseRunner_README.md  CMakeLists.txt  LuaBaseRunner.h  LuaBaseRunner.mm  README.md  hlov.md
API/: API_ARCHITECTURE.md  COLLISION_DETECTION_API.md  ENHANCED_TILE_SYSTEM_DESIGN.md  LARGE_BUFFER_SCROLLING.md  QUICK_START.md  VIDEO_SCROLLING_DESIGN.md  st_api_assets.cpp  st_api_audio.cpp  st_api_audio.cpp.backup  st_api_audio_new.cpp  st_api_audio_voices_only.cpp  st_api_circles.h  st_api_circles.mm  st_api_collision.cpp  st_api_collision.h  st_api_context.cpp  st_api_context.h  st_api_display.cpp  st_api_file_drawing.mm  st_api_input.cpp  st_api_lines.h  st_api_lines.mm  st_api_polygons.h  st_api_polygons.mm  st_api_rectangles.h  st_api_rectangles.mm  st_api_sprites.mm  st_api_stars.h  st_api_stars.mm  st_api_tilemap.mm  st_api_tileset_drawing.mm  st_api_utils.cpp  st_api_video_image.mm  st_api_video_image.mm.backup  st_api_video_mode.cpp  st_api_video_mode.h  st_api_video_palette.cpp  st_api_video_palette.h  st_api_video_scroll.h  st_sprite_drawing_utils.h  (+3 more)
Audio/: ABCParser.h  ABCParser.mm  AudioManager.h  AudioManager.mm  CoreAudioEngine.h  CoreAudioEngine.mm  MidiEngine.h  MidiEngine.mm  MusicBank.cpp  MusicBank.h  SIDBank.cpp  SIDBank.h  SIDPlayer.cpp  SIDPlayer.h  SoundBank.h  SynthEngine.h  SynthEngine.mm
Audio/Voice/: VoiceController.cpp  VoiceController.h  VoiceScript.cpp  VoiceScript.h  VoiceScriptPlayer.cpp  VoiceScriptPlayer.h
Cart/: CartAssetProvider.cpp  CartAssetProvider.h  CartLoader.cpp  CartLoader.h  CartManager.cpp  CartManager.h  README.md
Data/: PaletteLibrary.cpp  PaletteLibrary.h  STANDARD_PALETTES_README.md  standard_palettes.json
Debug/: Logger.cpp  Logger.h  README.md  test_logger.cpp
Display/: CharacterMapping.cpp  CharacterMapping.h  CircleManager.h  CircleManager.mm  DisplayManager.h  DisplayManager.mm  GraphicsLayer.cpp  GraphicsLayer.h  GraphicsRenderer.h  GraphicsRenderer.mm  LineManager.h  LineManager.mm  LoResBuffer.cpp  LoResBuffer.h  LoResPaletteManager.cpp  LoResPaletteManager.h  PResBuffer.cpp  PResBuffer.h  PResPaletteManager.cpp  PResPaletteManager.h  PaletteAutomation.h  PolygonManager.h  PolygonManager.mm  RectangleManager.h  RectangleManager.mm  SPRTZ_COMPLETE.md  SPRTZ_INTEGRATION.md  SpriteCompression.cpp  SpriteCompression.h  SpriteManager.h  SpriteManager.mm  StarManager.h  StarManager.mm  TextDisplayManager.h  TextDisplayManager.mm  TextGrid.cpp  TextGrid.h  UResBuffer.cpp  UResBuffer.h  WResBuffer.cpp  (+7 more)
Display/Shaders/: rectangle_shaders.metal  star_shaders.metal
Display/VideoMode/: VideoMode.h  VideoModeManager.cpp  VideoModeManager.h  VideoScrollManager.h
Editor/: Cursor.cpp  Cursor.h  Document.cpp  Document.h  EditorAPI.h  EditorAPI.mm  EditorRenderer.cpp  EditorRenderer.h  EditorStatusBar.h  EditorStatusBar.mm  ExportImportManager.cpp  ExportImportManager.h  FindDialogs.h  FindDialogs.mm  InputHandler.cpp  InputHandler.h  LuaFormatterWrapper.cpp  LuaFormatterWrapper.h  ScreenMode.cpp  ScreenMode.h  ScreenState.cpp  ScreenState.h  ScriptBrowserDialog.h  ScriptBrowserDialog.mm  ScriptDatabase.h  ScriptDatabase.mm  TextBuffer.cpp  TextBuffer.h  TextEditor.cpp  TextEditor.h
Input/: InputManager.cpp  InputManager.h  SimpleLineEditor.cpp  SimpleLineEditor.h
Metal/: FONT_ATLAS_README.md  FontAtlas.h  FontAtlas.mm  GraphicsRenderer.metal  MetalRenderer.h  MetalRenderer.mm  PrimitiveRenderer.metal  TextRenderer.metal  TilemapRenderer.metal  font_atlas_jetbrains_mono_10x18_medium_14pt_metadata.h  font_atlas_jetbrains_mono_12x18_medium_14pt_metadata.h  font_atlas_jetbrains_mono_14x18_medium_14pt_metadata.h  font_atlas_jetbrains_mono_16x16_bold_12pt_metadata.h  font_atlas_jetbrains_mono_16x16_bold_metadata.h  font_atlas_jetbrains_mono_16x16_fixed_metadata.h  font_atlas_jetbrains_mono_16x16_medium_12pt_metadata.h  font_atlas_jetbrains_mono_16x16_metadata.h  font_atlas_jetbrains_mono_16x16_top_aligned_metadata.h  font_atlas_jetbrains_mono_18x18_medium_14pt_metadata.h  font_atlas_jetbrains_mono_20x20_metadata.h  font_atlas_jetbrains_mono_8x18_medium_14pt_metadata.h  font_atlas_jetbrains_mono_9x18_medium_14pt_metadata.h  font_atlas_petme128_16x16_boxdraw_metadata.h  font_atlas_petme128_16x16_metadata.h  font_atlas_petme128_20_metadata.h  font_atlas_petme128_metadata.h  font_atlas_unscii_unscii-16-full_8x16_metadata.h  font_atlas_unscii_unscii-16_8x16_metadata.h  font_atlas_unscii_unscii-8_8x8_metadata.h  generate_font_atlas.py
Particles/: ParticleSystem.cpp  ParticleSystem.h  README.md
Startup/: AppStartupStateMachine.h  AppStartupStateMachine.mm
Tilemap/: Camera.cpp  Camera.h  INDEXED_TILE_INTEGRATION.md  PaletteBank.cpp  PaletteBank.h  SPRTZ_FOR_TILES_ANALYSIS.md  SPRTZ_FOR_TILES_SUMMARY.md  SPRTZ_VS_TILESET_DIAGRAM.md  TileData.cpp  TileData.h  TileDataEx.h  Tilemap.cpp  Tilemap.h  TilemapEx.cpp  TilemapEx.h  TilemapFormat.cpp  TilemapFormat.h  TilemapIndexedAPI.cpp  TilemapIndexedAPI.h  TilemapLayer.cpp  TilemapLayer.h  TilemapManager.cpp  TilemapManager.h  TilemapRenderer.h  TilemapRenderer.mm  Tileset.h  Tileset.mm  TilesetIndexed.cpp  TilesetIndexed.h  TilesetLoader.h  TilesetLoader.mm
UI/: InputLineEditor.cpp  InputLineEditor.h  TextGridOutputStream.cpp  TextGridOutputStream.h
Util/: README_SafeTime.md  SafeTime.h
